# asgard

./: .env.example  .gitignore  CLAUDE.md  CURRENT_CONTEXT.md  STATUS.md  SUPERAGENT.md  TASKS.md  docker-compose.yml
Contexto/: ANTIGRAVITY_BRIEFING.md  ASGARD_ODIN_Naming_Vision_Mission_ES.md  MEMORY_v0.2_Architecture.md  ODIN_COUNCIL_MASTER.md  ODIN_Manifiesto.md  odin_council_master_v1.1.md
chassis/: .dockerignore  Dockerfile  chassis.config.yaml  pyproject.toml  requirements.txt
chassis/src/: main.py
chassis/src/chassis/: config.py
chassis/src/chassis/api/: app.py  mcp.py
chassis/src/chassis/api/routes/: health.py  profile.py  proposals.py  turns.py
chassis/src/chassis/classifier/: __init__.py
chassis/src/chassis/embeddings/: __init__.py  base.py  ollama.py  openai.py
chassis/src/chassis/llm/: __init__.py  base.py  deepseek.py
chassis/src/chassis/models/: __init__.py  context.py  events.py  profile.py
chassis/src/chassis/observers/: __init__.py  base.py  registry.py  technical.py
chassis/src/chassis/stores/: __init__.py  base.py  raw.py
chassis/tests/: test_api_integration.py  test_classifier.py  test_config.py  test_deepseek_llm.py  test_embeddings.py  test_ollama_embeddings.py  test_raw_store.py
docs/: 20260503-1800_DECISION_decisions-log-sesion-01.md  20260503-1810_BRIEF_gemini-01-correcciones-base.md  20260503-1820_BRIEF_gemini-02-sistema-configuracion.md  20260503-1830_BRIEF_gemini-03-capa-stores.md  20260503-1840_BRIEF_gemini-04-embeddings-clasificador.md  20260503-1850_BRIEF_gemini-05-api-mcp-tests.md  INDEX.md  database_schemas.md  (+7 more)
(+17 files in other folders)
